# SpaceWar

./: .gitignore  CMakeLists.txt  HowToPlay.md  LICENSE  Makefile  ReadMe.md  engine.cpp  engine.hpp  event.cpp  event.hpp  glhelpfunc.cpp  glhelpfunc.hpp  libmath.cpp  libmath.hpp  log.hpp  main.cpp  pack.sh  pch.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.hpp  tool.hpp
assets/: game_finish_btn.aseprite
assets/shaders/: fragment.shader  vertex.shader
include/game/: action.hpp  ai.hpp  component.hpp  constants.hpp  controller.hpp  entity.hpp  global.hpp  gui.hpp  init_info.hpp  quick_list.hpp  sprite.hpp  system.hpp
include/game/controllers/: fightship_controller.hpp  freightship_controller.hpp  spaceship_controller.hpp
include/game/stages/: gamelogo.hpp  select.hpp  space.hpp  welcome.hpp
include/tinyengine/: audio.hpp  camera.hpp  engine.hpp  event.hpp  inner_bmpfont.hpp  libmath.hpp  log.hpp  pch.hpp  pool.hpp  renderer.hpp  scence.hpp  shader.hpp  texture.hpp  tilesheet.hpp  tinyengine.hpp  tool.hpp
include/tinyengine/ecs/: component.hpp  context.hpp  ecs.hpp  entity.hpp  system.hpp
libs/glad/include/glad/: gl.h
libs/miniaudio/: miniaudio.c
license/: miniaudio-license.txt
licenses/: stb_image-license.txt
src/game/: action.cpp  ai.cpp  component.cpp  entity.cpp  global.cpp  gui.cpp  main.cpp  sprite.cpp  system.cpp
src/game/controllers/: fightship_controller.cpp  freightship_controller.cpp  spaceship_controller.cpp
src/game/stages/: gamelogo.cpp  select.cpp  space.cpp  welcome.cpp
src/tinyengine/: audio.cpp  camera.cpp  engine.cpp  event.cpp  glhelpfunc.cpp  inner_bmpfont.cpp  libmath.cpp  renderer.cpp  shader.cpp  texture.cpp  tilesheet.cpp
src/tinyengine/ecs/: component.cpp  context.cpp  system.cpp
tests/: CMakeLists.txt  audio.cpp  innerBmpFont.cpp  math.cpp  quicklist.cpp  renderer.cpp  unittest.hpp
